--- a/index.html
+++ b/index.html
@@ -1,49 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Galaxy → System → Fleet</title>
-
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  overflow: hidden;
-  font-family: Arial, sans-serif;
-  color: white;
-}
-
-#ui {
-  position: fixed;
-  left: 10px;
-  top: 10px;
-  z-index: 10;
-  font-size: 12px;
-  opacity: 0.8;
-}
-
-canvas {
-  display: block;
-}
-</style>
+  <meta charset="UTF-8" />
+  <title>Space Empire Game</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
 </head>
-
 <body>
 
-<div id="ui">
-  Mouse Wheel = Zoom<br>
-  Drag = Pan
-</div>
-
-<canvas id="canvas"></canvas>
+<canvas id="game"></canvas>
 
 <!-- ORDER MATTERS -->
-<script src="js/world.js"></script>
 <script src="js/camera.js"></script>
+<script src="js/galaxy.js"></script>
+<script src="js/systems.js"></script>
+<script src="js/fleets.js"></script>
 <script src="js/renderer.js"></script>
+<script src="js/core.js"></script>
 
 </body>
 </html>
