--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Space Empire Game</title>
+<body style="background:red">
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: black;
-      overflow: hidden;
-    }
-    canvas {
-      display: block;
-    }
-  </style>
-</head>
-<body>
+  <h1 style="color:white">INDEX LOADED</h1>
 
-  <!-- MAIN CANVAS -->
   <canvas id="game"></canvas>
 
-  <!-- LOAD GAME FILES (ORDER MATTERS) -->
+  <script>
+    console.log("INDEX SCRIPT RUNNING");
+  </script>
+
   <script src="js/galaxy.js"></script>
   <script src="js/systems.js"></script>
   <script src="js/fleets.js"></script>
@@ -30,4 +16,3 @@
   <script src="js/core.js"></script>
 
 </body>
-</html>
