--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Space Empire Game</title>
 
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: black;
+      background: red;
       overflow: hidden;
     }
     canvas {
@@ -17,12 +16,9 @@
     }
   </style>
 </head>
-
 <body>
 
-  <h1 style="color:white; position:absolute; z-index:10">
-    INDEX LOADED
-  </h1>
+  <h1 style="color:white">INDEX LOADED</h1>
 
   <canvas id="game"></canvas>
 
@@ -30,7 +26,7 @@
     console.log("INDEX SCRIPT RUNNING");
   </script>
 
-  <!-- GAME FILES -->
+  <!-- SCRIPT LOAD ORDER (DO NOT CHANGE) -->
   <script src="js/galaxy.js"></script>
   <script src="js/systems.js"></script>
   <script src="js/fleets.js"></script>
