--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Space Empire Game</title>
 
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: red;
+      background: black;
       overflow: hidden;
     }
     canvas {
@@ -18,15 +19,9 @@
 </head>
 <body>
 
-  <h1 style="color:white">INDEX LOADED</h1>
-
   <canvas id="game"></canvas>
 
-  <script>
-    console.log("INDEX SCRIPT RUNNING");
-  </script>
-
-  <!-- SCRIPT LOAD ORDER (DO NOT CHANGE) -->
+  <!-- GAME FILES -->
   <script src="js/galaxy.js"></script>
   <script src="js/systems.js"></script>
   <script src="js/fleets.js"></script>
