--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <canvas id="game"></canvas>
 
+  <!-- LOAD ORDER MATTERS -->
   <script src="js/galaxy.js"></script>
   <script src="js/systems.js"></script>
   <script src="js/fleets.js"></script>
