--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>Space Empire Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
       background: black;
       overflow: hidden;
     }
-
     canvas {
       display: block;
-      width: 100vw;
-      height: 100vh;
     }
   </style>
 </head>
@@ -25,6 +21,7 @@
 
   <canvas id="game"></canvas>
 
+  <!-- ORDER IS CRITICAL -->
   <script src="js/galaxy.js"></script>
   <script src="js/systems.js"></script>
   <script src="js/fleets.js"></script>
