--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Space Empire Game</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Galaxy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
     html, body {
@@ -19,15 +19,9 @@
 </head>
 <body>
 
-  <canvas id="game"></canvas>
+<canvas id="game"></canvas>
 
-  <!-- ORDER IS CRITICAL -->
-  <script src="js/galaxy.js"></script>
-  <script src="js/systems.js"></script>
-  <script src="js/fleets.js"></script>
-  <script src="js/camera.js"></script>
-  <script src="js/renderer.js"></script>
-  <script src="js/core.js"></script>
+<script src="js/galaxy.js"></script>
 
 </body>
 </html>
