--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Galaxy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta charset="UTF-8">
+  <title>Space Empire Galaxy</title>
   <style>
     html, body {
       margin: 0;
@@ -22,6 +20,10 @@
 <canvas id="game"></canvas>
 
 <script src="js/galaxy.js"></script>
+<script src="js/stars.js"></script>
+<script src="js/camera.js"></script>
+<script src="js/renderer.js"></script>
+<script src="js/core.js"></script>
 
 </body>
 </html>
