--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Space Empire Galaxy</title>
+  <title>Galaxy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       margin: 0;
@@ -10,20 +11,18 @@
       background: black;
       overflow: hidden;
     }
-    canvas {
-      display: block;
-    }
+    canvas { display: block; }
   </style>
 </head>
 <body>
 
 <canvas id="game"></canvas>
 
-<script src="js/galaxy.js"></script>
-<script src="js/stars.js"></script>
+<script src="js/core.js"></script>
 <script src="js/camera.js"></script>
 <script src="js/renderer.js"></script>
-<script src="js/core.js"></script>
+<script src="js/stars.js"></script>
+<script src="js/galaxy.js"></script>
 
 </body>
 </html>
